app/src/main/java/com/example/basecleanarchitechturedagger/data/remote/entity/error/TimeoutError.kt
package com.example.basecleanarchitechturedagger.data.remote.entity.error

data class TimeoutError(override var status: Int = 0) : ErrorInterface
